总状态的实验室状态页面恢复完成

--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
@@ -1,5 +1,5 @@
 
-<div id="tab3" class="box shuju_result">
+<div id="tab3" class="box shuju_result" style="display: none">
     <div class="pageSwitch">
         <span class="page_pre"></span>
         <span class="page_next"></span>
