--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab4.html
@@ -1,80 +1,48 @@
-<head>
-</head>
+<div class="box shujuWajue tab4"  style="display: none">
+    <div class="shujuWajue_left">
+        <span class="title">模块商过程能力分析</span>
+        <!--<div class="echarts_title echarts_title2">量产一致性保障</div>-->
+        <div class="shujuWajue_left_top">
 
-<div class="box shujuWajue tab4">
-        <div class="shujuWajue_left">
-            <span class="title">模块商过程能力分析</span>
-            <!--<div class="echarts_title echarts_title2">量产一致性保障</div>-->
-            <div class="shujuWajue_left_top">
+            <h3>模块商质量水平分布</h3>
+            <div class="rename-ppm">ppm</div>
+            <div id="myChart14"></div>
+            <div class="shujuWajue_left_top_list debug">
 
-                <h3>模块商质量水平分布</h3>
-                <div class="rename-ppm">ppm</div>
-                <div id="myChart14"></div>
-                <div class="shujuWajue_left_top_list">
-                    <!--<div>模块商名称：</div>-->
-                    <form action="">
-                        <label for="type" style="margin-left: 2.4em">模块商名称：</label>
-                        <select id="type" name="请选择" onchange="tab4JianSelected(this)">
-                            <option class="showLabel" style="display: none">广州捷普电子</option>
-                            ##for(p in providerDic){
-                            <optgroup class="main main${p.id!}" label=${p.name!}>
-                                ##for(c in p.children){
-                                ##if(pLP.first&&cLP.first){
-                                <option class="main${p.id}-sub active" data="${c.id}" value="${c.name}">${c.name}</option>
-                                ##}else{
-                                <option class="main${p.id}-sub" data="${c.id}" value="${c.name}">${c.name}</option>
-                                ##}
-                                ##}
-                            </optgroup>
 
-                            ##}
-                        </select>
-
-                        <label for="station" style="margin-left: 1em">工位：</label>
-                        <select id="station" name="请选择" onchange="tab4StationSelected(this)">
-                            ##for(c in providerDicStation){
-                                ##if(cLP.first){
-                                    <option class="showLabel active" data="${c.id}" value="${c.name}">${c.name}</option>
-                                ##}else{
-                                    <option class="showLabel" data="${c.id}" value="${c.name}">${c.name}</option>
-                                ##}
-                                ##}
-
-                        </select>
-                    </form>
-
-                </div>
             </div>
-            <div class="shujuWajue_left_bottom">
-                <div class="shujuWajue_left_bottom_spc">
-                    <!--<div class="echarts_title echarts_title1">量产一致性对比分析</div>-->
-                    <h3><span class="white" id="tab4_jiance_xh_name"></span> SPC分析</h3>
-                    <p class="result" id="tab4_jiance_xh_result"></p>
-                    <div id="myChart15"></div>
-                    <div id="myChart15_2"></div>
-                </div>
-                <div class="shujuWajue_left_bottom_cpk">
-                    <h3><span class="white" id="tab4_jiance_xh_name2"></span> cpk分析</h3>
-                    <p class="result" id="tab4_jiance_xh_result2"></p>
-                    <div id="myChart16"></div>
-                </div>
-            </div>
-
+            <span>下面能不能显示</span>
         </div>
-        <div class="shujuWajue_right">
-            <span class="title">共产一致性保障</span>
-            <!--<div class="echarts_title echarts_title2">共产一致性保障</div>-->
-            <div class="shujuWajue_right_top">
-                <div id="myChart17"></div>
+        <div class="shujuWajue_left_bottom">
+            <div class="shujuWajue_left_bottom_spc">
+                <!--<div class="echarts_title echarts_title1">量产一致性对比分析</div>-->
+                <h3><span class="white" id="tab4_jiance_xh_name"></span> SPC分析</h3>
+                <p class="result" id="tab4_jiance_xh_result"></p>
+                <div id="myChart15"></div>
+                <div id="myChart15_2"></div>
             </div>
-            <div class="shujuWajue_right_bottom">
-                <div id="myChart18"></div>
+            <div class="shujuWajue_left_bottom_cpk">
+                <h3><span class="white" id="tab4_jiance_xh_name2"></span> cpk分析</h3>
+                <p class="result" id="tab4_jiance_xh_result2"></p>
+                <div id="myChart16"></div>
             </div>
         </div>
+
+    </div>
+    <div class="shujuWajue_right">
+        <span class="title">共产一致性保障</span>
+        <!--<div class="echarts_title echarts_title2">共产一致性保障</div>-->
+        <div class="shujuWajue_right_top">
+            <div id="myChart17"></div>
+        </div>
+        <div class="shujuWajue_right_bottom">
+            <div id="myChart18"></div>
+        </div>
+    </div>
 </div>
 <script>
-$(function () {
-	// loadTab4Data();
-});
+    $(function () {
+        // loadTab4Data();
+    });
 </script>
 
