总状态下的页面恢复，tab4有问题

--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
@@ -1,5 +1,5 @@
 
-<div id="tab3" class="box shuju_result" style="display: none">
+<div id="tab3" class="box shuju_result">
     <div class="pageSwitch">
         <span class="page_pre"></span>
         <span class="page_next"></span>
@@ -125,6 +125,6 @@ $(function () {
     $("#tab3").find(".btnGroup > span").click(function () {
         $(this).addClass("active").siblings().removeClass("active")
     });
-    // loadTab3Data();
+    loadTab3Data();
 })
 </script>
