--- a/src/main/webapp/WEB-INF/pages/layout/totalState.html
+++ b/src/main/webapp/WEB-INF/pages/layout/totalState.html
@@ -91,10 +91,7 @@
                 // 右四屏顶部三个大标签的切换
                 $(".tab-item").click(function () {
                     $(this).addClass("active_right").siblings().removeClass("active_right");
-                    // 3. 获取到当前菜单的索引号
-                    var index = $(this).index();
-                    // 4. 通过索引号对应关系 让这个索引号对应的内容展示出来
-                    $("#totalState .box:eq(" + index + ")").addClass("selected").siblings().removeClass("selected");
+                    $("#totalState .box:eq(" + $(this).index() + ")").addClass("selected").siblings().removeClass("selected");
                     // console.log("下右侧面开始图表重置");
                     resetSizeRight();
                 });
