--- a/src/main/webapp/WEB-INF/pages/layout/totalState.html
+++ b/src/main/webapp/WEB-INF/pages/layout/totalState.html
@@ -35,10 +35,9 @@
         </script>
         <div id="totalState">
             <!--这里是后面4屏的代码-->
-            <div class="btn-back">
+            <!--<div class="btn-back">
                 <span class="icon"></span>
-                <!--<span>返回总状态</span>-->
-            </div>
+            </div>-->
             <div class="tab">
                 <ul>
                     <li class="tab-item active_right">实验室状态</li>
