--- a/src/main/webapp/WEB-INF/pages/layout/right.html
+++ b/src/main/webapp/WEB-INF/pages/layout/right.html
@@ -1,6 +1,6 @@
 
 <div id="r">
-    <iframe style="display: none" src="${contextPath!}/layout/lab" frameborder="0"></iframe>
+    <!--<iframe src="${contextPath!}/layout/lab" frameborder="0"></iframe>-->
     <iframe src="${contextPath!}/layout/totalState" frameborder="0"></iframe>
 
 </div>
