--- a/src/main/webapp/static/credit/css/common.css
+++ b/src/main/webapp/static/credit/css/common.css
@@ -425,3 +425,60 @@ input::-webkit-inner-spin-button{
 .layui-layer-btn .layui-layer-btn0{
     color: white!important;
 }
+
+.messageBox{
+	position: fixed;
+    top: 9%;
+    right: 11%;
+    width: 20rem;
+    height: 20rem;
+    background: #fff;
+    box-shadow: 0px 0px 10px 1px #ccc;
+}
+.hideThis {
+    display:none;
+}
+ .messageBox ul{
+     overflow: auto;
+    height: 100%;
+ }
+
+.messageBox ul > li.unread > h4:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 1rem;
+    width: .625rem;
+    height: .625rem;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    transform: translateY(-50%);
+    background-color: var(--activeColor);
+}
+.messageBox ul li h4{
+     height: 2rem;
+    line-height: 2rem;
+    padding-left: 2rem;
+    border-bottom: solid 1px #e5e5e5; 
+    cursor:pointer;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    position:relative;
+}
+.messageBox ul li:hover {
+	background:#e6f7ff;
+}
+.clickRead {
+	position:absolute;
+	bottom:0;
+	left:0;
+	width:100%;
+    height: 2rem;
+    background: #fff;
+    line-height: 2rem;
+    text-align: center;
+    font-weight: 900;
+    cursor: pointer;
+}
