--- a/src/main/webapp/WEB-INF/pages/layout/hallMap.html
+++ b/src/main/webapp/WEB-INF/pages/layout/hallMap.html
@@ -33,7 +33,7 @@
         <div class="left">
             <div class="left-top">
                 <div class="box distribution">
-                    <h3>全球实验室分布2</h3>
+                    <h3>全球实验室分布</h3>
                     <div class="totalNum"><span><strong>5</strong>大洲</span>
                         <span><strong>18</strong>个国家</span>
                     </div>
