396报告的一些处理

--- a/src/main/webapp/static/credit/css/common.css
+++ b/src/main/webapp/static/credit/css/common.css
@@ -1,4 +1,4 @@
-﻿/* ==================头部=================== */
+/* ==================头部=================== */
 #container {
     position: relative;
     height: calc(100% - 2.7rem);
