--- a/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
+++ b/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
@@ -16,16 +16,16 @@
 <div id="container">
     <nav class="left-nav">
         <ul>
-            <li>
-                <a href="#">样品管理</a>
-            </li>
+            <!--<li>-->
+                <!--<a href="#">样品管理</a>-->
+            <!--</li>-->
             <li class="show">
                 <a href="">订单管理</a>
                 <ul>
-                    <li><a href="">整机订单汇总</a></li>
+                    <!--<li><a href="">整机订单汇总</a></li>-->
                     <li class="active"><a href="">订单视图查看</a></li>
-                    <li><a href="">整机订单要求修改</a></li>
-                    <li><a href="">整机订单查看</a></li>
+                    <!--<li><a href="">整机订单要求修改</a></li>-->
+                    <!--<li><a href="">整机订单查看</a></li>-->
                 </ul>
             </li>
         </ul>
