--- a/src/main/webapp/WEB-INF/pages/layout/right.html
+++ b/src/main/webapp/WEB-INF/pages/layout/right.html
@@ -1,7 +1,7 @@
 
 <div id="r">
-    <!--<iframe src="${contextPath!}/layout/lab" frameborder="0"></iframe>-->
-    <iframe src="${contextPath!}/layout/totalState" frameborder="0"></iframe>
+    <iframe src="${contextPath!}/layout/lab" frameborder="0" name="r"></iframe>
+    <!--<iframe src="${contextPath!}/layout/totalState" frameborder="0"></iframe>-->
 
 </div>
 
