--- a/src/main/webapp/WEB-INF/pages/layout/hallMap.html
+++ b/src/main/webapp/WEB-INF/pages/layout/hallMap.html
@@ -26,7 +26,7 @@
 <div id="myContainer">
     <header>
         <span class="mainLogo"></span>
-        <h1><a href="${contextPath!}/phm" target="_top">全球实验室22</a></h1>
+        <h1><a href="${contextPath!}/phm" target="_top">全球实验室</a></h1>
         <h1>Haier Global Labs</h1>
     </header>
     <div id="container">
