视频服务部署到服务器调通，增加判断和开启flash按钮，实验室运营状态的订单数据格式确定

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -252,6 +252,8 @@
                                         <!--<div id="smallVideo"></div>-->
                                         <div id="smallVideo">
                                             <iframe src=""></iframe>
+                                            <!--<a style="position: absolute" href="http://www.adobe.com/go/getflashplayer" rel="nofollow" target="_blank" title="升级Flash插件">启用flash</a>-->
+
                                         </div>
                                         <div class="loadingAnimation">视频接入中</div>
                                         <iframe class="forceVideoJSplaying" src=""
@@ -285,7 +287,6 @@
             </div>
         </div>
     </div>
-</div>
     <script src="${contextPath!}/static/assets/echarts/echarts-3.5.2.js"></script>
     <script src="${contextPath!}/static/js/manyEcharts.js"></script>
     <script src="${contextPath!}/static/js/common.js"></script>
@@ -321,7 +322,6 @@
 
 <script>
     $(function () {
-
 
         //中心实验室顶上的“返回总状态”和“中海博睿实验室”两个按钮
         var $labMain_ct_btn = $(".labMain_content_country .labMain_ct_btn");
