--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -14,6 +14,7 @@
 <div id="l">
     <div class="l left3x3 fromHallMap">
         <iframe src="${contextPath!}/layout/hallMap?bigScreen7x3" frameborder="0"></iframe>
+        <a hidden style="position: relative;top: -2rem;" id="runFlashBtn" href="http://www.adobe.com/go/getflashplayer" rel="nofollow" target="_blank" title="升级Flash插件">启用flash</a>
     </div>
 </div>
 
